appId: host.exp.Exponent
---
- stopApp: host.exp.Exponent
- openLink: "exp://localhost:8081"
- waitForAnimationToEnd: { timeout: 40000 }
- tapOn: "专家"
- waitForAnimationToEnd: { timeout: 8000 }
- tapOn: "对话"
- waitForAnimationToEnd: { timeout: 8000 }
- tapOn: "ZZZ_NO_SUCH_ELEMENT"
